--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.4",
+    "katex": "^0.16.0",
     "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-latex": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^4.7.3"
