--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-latex": "^2.0.0"
+    "react-latex": "^2.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "typescript": "^4.7.3"
