--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.4",
+    "chroma-js": "^2.4.2",
+    "d3": "^7.5.0",
+    "d3-sankey": "^0.12.3",
     "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
