--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@svgr/webpack": "^6.3.1",
     "chroma-js": "^2.4.2",
     "d3": "^7.5.0",
     "d3-sankey": "^0.12.3",
