--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "chroma-js": "^2.4.2",
     "d3": "^7.5.0",
     "d3-sankey": "^0.12.3",
     "katex": "^0.16.0",
     "mongodb": "^4.1.3",
-    "next": "latest",
+    "next": "^12.2.3",
+    "next-auth": "^4.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-latex": "^2.0.0",
