--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@next-auth/mongodb-adapter": "^1.0.4",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.3.0",
     "@svgr/webpack": "^6.3.1",
     "chroma-js": "^2.4.2",
     "d3": "^7.5.0",
@@ -24,6 +27,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "prisma": "^4.3.0",
     "typescript": "^4.7.3"
   }
 }
