--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@svgr/webpack": "^6.3.1",
@@ -21,7 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-latex": "^2.0.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "typescript": "^4.7.3"
