--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
+    "@supabase/supabase-js": "^2.2.3",
     "@svgr/webpack": "^6.3.1",
     "chroma-js": "^2.4.2",
     "d3": "^7.5.0",
@@ -17,7 +21,6 @@
     "katex": "^0.16.0",
     "mongodb": "^4.1.3",
     "next": "^12.2.3",
-    "next-auth": "^4.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-latex": "^2.0.0",
